--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Playwrite+PL:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&display=swap");
+body {
+  font-family: "Poppins", sans-serif;
+  background: rgb(124, 124, 124);
+  background: linear-gradient(90deg, rgb(39, 39, 39) 0%, rgba(0, 0, 0, 1) 100%);
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+h1 {
+  font-family: "Poppins", sans-serif;
+  font-size: 2.5rem;
+  color: #e6e5e5;
+  margin-bottom: 20px;
+}
+
+.MuiAutocomplete-root {
+  width: 300px;
+  display: block;
+  margin: 0 auto 20px;
+}
+
+.MuiAutocomplete-inputRoot {
+  background-color: #252525;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.MuiTextField-root .MuiInputLabel-root {
+  font-size: 1rem;
+  color: #333;
+}
+
+button {
+  font-family: "Poppins", sans-serif;
+  padding: 12px 24px;
+  font-size: 16px;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin-right: 10px;
+  display: inline-block;
+}
+
+button:hover {
+  transform: scale(1.05);
+}
+
+button:active {
+  transform: scale(0.98);
+}
+
+button:focus {
+  outline: none;
+}
+
+button.buscar-clima {
+  background-color: #28a745;
+  color: #fff;
+}
+
+button.buscar-clima:hover {
+  background-color: #218838;
+}
+
+button.limpar {
+  background-color: #ff4d4d;
+  color: #fff;
+}
+
+button.limpar:hover {
+  background-color: #d43f3a;
+}
+
+.error-message {
+  color: red;
+  margin-top: 20px;
+}
+
+.weather-info {
+  margin-top: 20px;
   text-align: center;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.weather-info h2 {
+  font-size: 1.8rem;
+  color: #cecece;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.weather-info p {
+  font-size: 1.2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.weather-info strong {
+  color: #007bff;
 }
